# ChangeLog for dev-haskell/haskell-src-exts
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-haskell/haskell-src-exts/ChangeLog,v 1.3 2006/02/16 13:27:26 dcoutts Exp $

  16 Feb 2006; <duncan@gentoo.org> haskell-src-exts-0.2.ebuild:
  Add "lib" to CABAL_FEATURES in preparation for pending eclass updates.

  10 Dec 2005; <duncan@gentoo.org> haskell-src-exts-0.2.ebuild:
  Patch to make it work with ghc-6.2.2. Hopefully this fixes bug #115034.
  Also disable the doc USE flag since it doesn't work.

*haskell-src-exts-0.2 (24 Oct 2005)

  24 Oct 2005; Luis F. Araujo <araujo@gentoo.org> +metadata.xml,
  +haskell-src-exts-0.2.ebuild:
  Added new package: haskell-src-exts
