@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 MD5 8767d96f5a56e1ac21a8ba2f48c173f0 ChangeLog 878
 RMD160 7b2c232d7de20fbbd0d82aa8772924738bde9b70 ChangeLog 878
 SHA256 e5dc736455c48a19472746c42aecf4193618a7477def73564cd715655b9713a0 ChangeLog 878
@@ -10,3 +13,10 @@ SHA256 1e583c75c2508167b6af6767171e381eece386e5229dfb4ffaa39c814193dd1b haskell-
 MD5 5173f3cddccbc40b8657fb05a97bfae1 metadata.xml 671
 RMD160 fd9612929239d60ebebb881ba6f46fbe7c436fef metadata.xml 671
 SHA256 7acde279d06a1095afbb79856ee028b68346cd45ebee58f734e965045e625c1d metadata.xml 671
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v1.4.2.1 (GNU/Linux)
+
+iD8DBQFD9JAR/B0cxt+cq+wRAhMOAJ9HDfrLUcbnMlcHPMoKxTcdU/h2DwCaA9DC
+31/eAyHa9PDpSG8BV5bUCzg=
+=7lk4
+-----END PGP SIGNATURE-----
