@@ -1,6 +1,9 @@
 # ChangeLog for dev-haskell/haskell-src-exts
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-haskell/haskell-src-exts/ChangeLog,v 1.3 2006/02/16 13:27:26 dcoutts Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-haskell/haskell-src-exts/ChangeLog,v 1.4 2006/02/16 14:45:25 dcoutts Exp $
+
+  16 Feb 2006; <duncan@gentoo.org> haskell-src-exts-0.2.ebuild:
+  Correct license, remove unnecessary dep on dev-haskell/harp and mark ~amd64
 
   16 Feb 2006; <duncan@gentoo.org> haskell-src-exts-0.2.ebuild:
   Add "lib" to CABAL_FEATURES in preparation for pending eclass updates.
